# ff-stats

./: .gitignore  README.md  ff-stats.cabal  stack.yaml
.circleci/: config.yml
app/: BestClassicMain.hs  BestPickEmMain.hs  BestTeamsMain.hs  FetchClassicProjectionsMain.hs  FetchPickEmProjectionsMain.hs  FetchProjectionsMain.hs  FetchWeekProjectionMain.hs
config/: example.dhall  name_overrides.dhall.example
src/: BestClassic.hs  BestPickEm.hs  BestTeams.hs  BestTeamsConfig.hs  FetchClassic.hs  FetchProjections.hs  FetchWeekProjection.hs  Fitness.hs  GenerateTeam.hs  SpecialCases.hs  Teams.hs  Types.hs
test/: FitnessSpec.hs  GenerateTeamSpec.hs  Spec.hs
