name:                ff-stats
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/robertjlooby/ff-stats#readme
license:             GPL-3
license-file:        LICENSE
author:              Robert Looby
maintainer:          robertjlooby@gmail.com
copyright:           2017 Robert Looby
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable best-pick-em
  hs-source-dirs:      src
  main-is:             BestPickEm.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       FetchWeekProjection
  build-depends:       base
                     , bytestring
                     , cassava
                     , html-conduit
                     , lens
                     , optparse-applicative
                     , optparse-text
                     , text
                     , vector
                     , vector-algorithms
                     , wreq
                     , xml-conduit
                     , xml-types
  default-language:    Haskell2010

executable fetch-week-projection
  hs-source-dirs:      app
                     , src
  main-is:             FetchWeekProjectionMain.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       FetchWeekProjection
  build-depends:       base
                     , bytestring
                     , html-conduit
                     , lens
                     , optparse-applicative
                     , optparse-text
                     , text
                     , wreq
                     , xml-conduit
                     , xml-types
  default-language:    Haskell2010

test-suite ff-stats-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/robertjlooby/ff-stats
