name:                ff-stats
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/robertjlooby/ff-stats#readme
license:             GPL-3
license-file:        LICENSE
author:              Robert Looby
maintainer:          robertjlooby@gmail.com
copyright:           2017 Robert Looby
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable best-pick-em
  hs-source-dirs:      app
                     , src
  main-is:             BestPickEmMain.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  other-modules:       BestPickEm
                     , FetchWeekProjection
                     , SpecialCases
                     , Types
  build-depends:       base
                     , bytestring
                     , cassava
                     , containers
                     , html-conduit
                     , lens
                     , optparse-applicative
                     , optparse-text
                     , text
                     , vector
                     , vector-algorithms
                     , wreq
                     , xml-conduit
                     , xml-types
  default-language:    Haskell2010

executable fetch-classic-projections
  hs-source-dirs:      app
                     , src
  main-is:             FetchClassicProjectionsMain.hs
  ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-N -T"
  other-modules:       BestClassic
                     , FetchWeekProjection
                     , SpecialCases
                     , Types
  build-depends:       base
                     , bytestring
                     , cassava
                     , containers
                     , ekg
                     , html-conduit
                     , lens
                     , optparse-applicative
                     , optparse-text
                     , text
                     , vector
                     , vector-algorithms
                     , wreq
                     , xml-conduit
                     , xml-types
  default-language:    Haskell2010

executable fetch-pick-em-projections
  hs-source-dirs:      app
                     , src
  main-is:             FetchPickEmProjectionsMain.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  other-modules:       BestPickEm
                     , FetchWeekProjection
                     , SpecialCases
                     , Types
  build-depends:       base
                     , bytestring
                     , cassava
                     , containers
                     , html-conduit
                     , lens
                     , optparse-applicative
                     , optparse-text
                     , text
                     , vector
                     , vector-algorithms
                     , wreq
                     , xml-conduit
                     , xml-types
  default-language:    Haskell2010

executable fetch-week-projection
  hs-source-dirs:      app
                     , src
  main-is:             FetchWeekProjectionMain.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  other-modules:       FetchWeekProjection
                     , Types
  build-depends:       base
                     , bytestring
                     , cassava
                     , html-conduit
                     , lens
                     , optparse-applicative
                     , optparse-text
                     , text
                     , wreq
                     , xml-conduit
                     , xml-types
  default-language:    Haskell2010

test-suite ff-stats-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , src
  main-is:             Spec.hs
  other-modules:       Fitness
                     , FitnessSpec
                     , Teams
                     , Types
  build-depends:       base
                     , bytestring
                     , cassava
                     , hspec
                     , text
                     , vector
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/robertjlooby/ff-stats
