name:                ff-stats
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/robertjlooby/ff-stats#readme
license:             GPL-3
license-file:        LICENSE
author:              Robert Looby
maintainer:          robertjlooby@gmail.com
copyright:           2017 Robert Looby
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable best-teams
  hs-source-dirs:      app
                     , src
  main-is:             BestTeamsMain.hs
  ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-N -T"
  other-modules:       BestTeams
                     , Fitness
                     , GenerateTeam
                     , Teams
                     , Types
  build-depends:       base
                     , bytestring
                     , cassava
                     , containers
                     , ekg
                     , QuickCheck
                     , quickcheck-instances
                     , optparse-applicative
                     , optparse-text
                     , random
                     , text
                     , vector
  default-language:    Haskell2010

executable fetch-projections
  hs-source-dirs:      app
                     , src
  main-is:             FetchProjectionsMain.hs
  ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-N -T"
  other-modules:       FetchProjections
                     , FetchWeekProjection
                     , SpecialCases
                     , Types
  build-depends:       base
                     , bytestring
                     , cassava
                     , containers
                     , ekg
                     , html-conduit
                     , lens
                     , QuickCheck
                     , quickcheck-instances
                     , optparse-applicative
                     , optparse-text
                     , text
                     , vector
                     , vector-algorithms
                     , wreq
                     , xml-conduit
                     , xml-types
  default-language:    Haskell2010

test-suite ff-stats-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , src
  main-is:             Spec.hs
  other-modules:       Fitness
                     , FitnessSpec
                     , GenerateTeam
                     , GenerateTeamSpec
                     , Teams
                     , Types
  build-depends:       base
                     , bytestring
                     , cassava
                     , hspec
                     , QuickCheck
                     , quickcheck-instances
                     , random
                     , text
                     , vector
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/robertjlooby/ff-stats
